chore: run `rails webpacker:install`

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ test/dummy/yarn-error.log
 test/dummy/storage/
 test/dummy/tmp/
 Gemfile.lock
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
